revision 24 - 20100630                                              |
    * Bumped QSpeedTest revision to r24                             |
    * Bumped QSpeedTestCLI revision to r3                           |
    * Both: Fixed a small bug which led to not downloading an       |
      available online update of the target list                    |
    * Both: Instead of overwriting an existing target list with a   |
      new update, the old list gets renamed with an additional .bak |
      extension                                                     |
    * Updated embedded target list                                  |


revision 23 - 20100629                                              |
    * QSpeedTestCLI r2: cosmetic changes                            |
    * QSpeedTest r23: cosmetic changes                              |
    * Both: Access total bytes downloaded global variable only after|
      mutex locking. Perhaps this will solve the occasional bug of  |
      the outrageously big download speeds                          |
    * Both: Two discrete download speed tests, one targets domestic |
      servers and the other international servers                   |
    * Updated embedded target list                                  |


revision 22 - 20100628                                              |
    * Renamed QSpeedTest's executable to QSpeedTestGUI              |
    * Merged source tree with QSpeedTestCLI                         |


revision 21 - 20100608                                              |
    * Previous commit didn't correctly update the About box's file  |


revision 20 - 20100608                                              |
    * Recompiled program and Qt DLLs reduced file sizes and removed |
      dependency upon libgcc_s_dw2-1.dll and mingwm10.dll. These 2  |
      files are no longer included in the new Qt DLLs' compressed   |
      archive that the project distributes                          |