@@ -27,7 +27,7 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 const QString PROJECTNAME = "QSpeedTest";
 const QString PROGRAMNAME = "QSpeedTest";
 const QString PROGRAMAUTHOR = "parsifal";
-const QString PROGRAMVERSION = "r24";
+const QString PROGRAMVERSION = "r25";
 const QString PROGRAMURL = "https://sourceforge.net/projects/qspeedtest/files/";
 const QString PROGRAMDISCUSSURL = "https://sourceforge.net/apps/phpbb/qspeedtest";
 const QString PROGRAMUPDATECHECKURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.version";
@@ -37,8 +37,6 @@ const int UPDATECHECKTIMEOUT = 3;
 const int PINGTIMEOUT = 1;
 const int DOWNLOADTESTSECS = 15;
 int PINGSPERTARGET = 4;
-QMutex MUTEX;
-qint64 BYTESDOWNLOADED;
 bool STOPBENCHMARK = false;
 
 
